--- a/server/mixcoder/SConscript
+++ b/server/mixcoder/SConscript
@@ -14,7 +14,8 @@ audioResamplerObj = env.Object('prog/AudioResampler.cpp', CCFLAGS=mixCoderCflags
 videoDecoderObj = env.Object('prog/VideoDecoder.cpp', CCFLAGS=mixCoderCflags )
 audioSpeexEncoderObj = env.Object('prog/AudioSpeexEncoder.cpp', CCFLAGS=mixCoderCflags )
 audioMp3EncoderObj = env.Object('prog/AudioMp3Encoder.cpp', CCFLAGS=mixCoderCflags )
-videoEncoderObj = env.Object('prog/VideoEncoder.cpp', CCFLAGS=mixCoderCflags )
+videoVp8EncoderObj = env.Object('prog/VideoVp8Encoder.cpp', CCFLAGS=mixCoderCflags )
+#videoH264EncoderObj = env.Object('prog/VideoH264Encoder.cpp', CCFLAGS=mixCoderCflags )
 audioMixerObj = env.Object('prog/AudioMixer.cpp', CCFLAGS=mixCoderCflags )
 videoMixerObj = env.Object('prog/VideoMixer.cpp', CCFLAGS=mixCoderCflags )
 
@@ -39,7 +40,8 @@ env.Program( mixCoderProg,
 	       videoDecoderObj,
 	       audioSpeexEncoderObj,
                audioMp3EncoderObj,
-	       videoEncoderObj,
+	       videoVp8EncoderObj,
+	       #videoH264EncoderObj,	
 	       audioMixerObj,
 	       videoMixerObj,
 	       flvOutputObj,
@@ -47,7 +49,7 @@ env.Program( mixCoderProg,
 	       flvSegmentParserObj,
 	       flvSegmentOutputObj,	
 	       mainObj],	
-	       LIBS=['pthread', 'mp3lame', 'avformat', 'avcodec', 'avutil', 'swscale', 'samplerate', 'speex', 'vpx'], CCFLAGS=mixCoderCflags)
+	       LIBS=['pthread', 'mp3lame', 'avformat', 'avcodec', 'avutil', 'swscale', 'samplerate', 'speex', 'vpx', 'x264'], CCFLAGS=mixCoderCflags)
 
 #test
 segOutputParserObj = env.Object('prog/SegOutputParser.cpp', CCFLAGS=mixCoderCflags )
