--- a/android-client/debateme/AndroidManifest.xml
+++ b/android-client/debateme/AndroidManifest.xml
@@ -40,7 +40,8 @@
         <activity
             android:name=".AirConfActivity"
             android:label="@string/app_name" 
-          	android:windowSoftInputMode="stateHidden"  >
+          	android:windowSoftInputMode="stateHidden"  
+          	android:screenOrientation="landscape" >
             <intent-filter>
 				<action android:name="android.intent.action.VIEW" />
 	            <category android:name="android.intent.category.DEFAULT" />
