--- a/android-client/debateme/bin/AndroidManifest.xml
+++ b/android-client/debateme/bin/AndroidManifest.xml
@@ -53,6 +53,16 @@
 	            <data android:pathPrefix="/room" />
             </intent-filter>
         </activity>
+	    <activity
+	        android:name=".ClipboardActivity"
+	        android:label="@string/app_name" 
+            android:icon="@android:drawable/clipboard">
+	        <intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+	            <category android:name="android.intent.category.DEFAULT" />
+	            <category android:name="android.intent.category.BROWSABLE" />
+	        </intent-filter>
+	    </activity>
     </application>
 
 </manifest>
