--- a/android-client/debateme/bin/AndroidManifest.xml
+++ b/android-client/debateme/bin/AndroidManifest.xml
@@ -54,9 +54,9 @@
             </intent-filter>
         </activity>
 	    <activity
-	        android:name=".ClipboardActivity"
-	        android:label="@string/app_name" 
-            android:icon="@android:drawable/clipboard">
+	        android:name=".share.ClipboardActivity"
+	        android:label="@string/copy_to_clipboard" 
+	        android:icon="@drawable/clipboard">
 	        <intent-filter>
 				<action android:name="android.intent.action.VIEW" />
 	            <category android:name="android.intent.category.DEFAULT" />
