--- a/android-client/Vispar/AndroidManifest.xml
+++ b/android-client/Vispar/AndroidManifest.xml
@@ -49,9 +49,9 @@
 	            <category android:name="android.intent.category.DEFAULT" />
 	            <category android:name="android.intent.category.BROWSABLE" />
 	            <data android:scheme="http" />
-	            <data android:host="debate.me" />
-	            <data android:host="*.debate.me" />
-	            <data android:host="www.debate.me" />
+	            <data android:host="vispar.com" />
+	            <data android:host="*.vispar.com" />
+	            <data android:host="www.vispar.com" />
 	            <data android:pathPrefix="/room" />
             </intent-filter>
         </activity>
