added fAAC codec b/c ffmpeg does not support S16 input, only FLT16 input, bad for conversion.

--- a/server/mixcoder/SConscript
+++ b/server/mixcoder/SConscript
@@ -14,6 +14,7 @@ audioResamplerObj = env.Object('prog/AudioResampler.cpp', CCFLAGS=mixCoderCflags
 videoDecoderObj = env.Object('prog/VideoDecoder.cpp', CCFLAGS=mixCoderCflags )
 audioSpeexEncoderObj = env.Object('prog/AudioSpeexEncoder.cpp', CCFLAGS=mixCoderCflags )
 audioFfmpegEncoderObj = env.Object('prog/AudioFfmpegEncoder.cpp', CCFLAGS=mixCoderCflags )
+audioFaacEncoderObj = env.Object('prog/AudioFaacEncoder.cpp', CCFLAGS=mixCoderCflags )
 audioMp3EncoderObj = env.Object('prog/AudioMp3Encoder.cpp', CCFLAGS=mixCoderCflags )
 videoVp8EncoderObj = env.Object('prog/VideoVp8Encoder.cpp', CCFLAGS=mixCoderCflags )
 videoFfmpegEncoderObj = env.Object('prog/VideoFfmpegEncoder.cpp', CCFLAGS=mixCoderCflags )
@@ -44,6 +45,7 @@ env.Program( mixCoderProg,
 	       audioSpeexEncoderObj,
                audioMp3EncoderObj,
                audioFfmpegEncoderObj,
+               audioFaacEncoderObj,
 	       videoFfmpegEncoderObj,
 	       videoVp8EncoderObj,
 	       videoH264EncoderObj,	
@@ -56,7 +58,9 @@ env.Program( mixCoderProg,
 	       flvSegmentInputObj,
 	       flvSegmentOutputObj,	
 	       mainObj],	
-	       LIBS=['pthread', 'mp3lame', 'avformat', 'avcodec', 'avutil', 'swscale', 'samplerate', 'speex', 'vpx', 'x264'], CCFLAGS=mixCoderCflags)
+	       LIBS=['pthread', 'mp3lame', 'avformat', 'avcodec', 'avutil', 'swscale', 'samplerate', 'speex', 'vpx', 'x264', 'faac'], 
+	       LIBPATH = ['/usr/lib', '/usr/local/lib'],
+	       CCFLAGS=mixCoderCflags)
 
 #test
 segOutputParserObj = env.Object('prog/SegOutputParser.cpp', CCFLAGS=mixCoderCflags )
