--- a/android-client/Vispar/AndroidManifest.xml
+++ b/android-client/Vispar/AndroidManifest.xml
@@ -38,7 +38,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity
+            android:name=".schedule.ViewEventActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+        		<action android:name="android.intent.action.SEND" /> 
+				<action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".mysessions.AirConfActivity"
             android:label="@string/app_name" 
