--- a/android-client/airconf/.project
+++ b/android-client/airconf/.project
@@ -22,4 +22,11 @@
 		<nature>com.adobe.flexbuilder.project.apollonature</nature>
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>[source path] User Interface</name>
+			<type>2</type>
+			<locationURI>FLASHPRO_APPCONFIG/Component%20Source/ActionScript%203.0/User%20Interface</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
