added login activity.

--- a/android-client/Vispar/AndroidManifest.xml
+++ b/android-client/Vispar/AndroidManifest.xml
@@ -90,14 +90,25 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.vispar.schedule.StartEventActivity"
+            android:name=".schedule.StartEventActivity"
             android:label="@string/title_activity_start_event" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".settings.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
+        </activity>
     </application>
+
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
 </manifest>
