--- a/android-client/Vispar/AndroidManifest.xml
+++ b/android-client/Vispar/AndroidManifest.xml
@@ -104,6 +104,12 @@
             android:label="@string/title_activity_login"
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
+        
+        <activity
+            android:name=".settings.RegisterActivity"
+            android:label="@string/title_activity_register"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
+        </activity>
     </application>
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
