added loadserver to groupmixer for loadbalancer to query.

--- a/red5-readonly/.classpath
+++ b/red5-readonly/.classpath
@@ -38,5 +38,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/howard/GroupVoIP2/red5-readonly/externallib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
