--- a/red5-readonly/pom.xml
+++ b/red5-readonly/pom.xml
@@ -770,6 +770,11 @@
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
 			<version>1.7.4</version>
-		</dependency>		
+		</dependency>
+		<dependency>
+		  <groupId>com.googlecode.json-simple</groupId>
+		  <artifactId>json-simple</artifactId>
+		  <version>1.1.1</version>
+		</dependency>
 	</dependencies>
 </project>
