--- a/android-client/Vispar/AndroidManifest.xml
+++ b/android-client/Vispar/AndroidManifest.xml
@@ -109,11 +109,19 @@
             android:label="@string/title_activity_logout"
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
-        
         <activity
             android:name=".settings.RegisterActivity"
             android:label="@string/title_activity_register"
             android:windowSoftInputMode="adjustResize|stateVisible" >
+        </activity>
+        <activity
+            android:name="com.vispar.settings.ForgetPasswordActivity"
+            android:label="@string/title_activity_forget_password" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
