--- a/android-client/Vispar/AndroidManifest.xml
+++ b/android-client/Vispar/AndroidManifest.xml
@@ -116,12 +116,8 @@
         </activity>
         <activity
             android:name="com.vispar.settings.ForgetPasswordActivity"
-            android:label="@string/title_activity_forget_password" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:label="@string/title_activity_forget_password" 
+            android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
     </application>
 
