--- a/android-client/chatroomextension/AndroidManifest.xml
+++ b/android-client/chatroomextension/AndroidManifest.xml
@@ -3,8 +3,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <application android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
+    <application android:label="@string/app_name">
     </application>
 
 </manifest>
