make sure the videofiles are in a common location.

--- a/red5-readonly/external/red5.properties
+++ b/red5-readonly/external/red5.properties
@@ -118,8 +118,8 @@ groupMixer.bLoadSegFromDisc = false
 groupMixer.bSaveSegToDisc = true
 groupMixer.bSaveFlvToDisc = true
 groupMixer.bGenKaraoke = true
-groupMixer.outputSegPath = /home/ubuntu/videofiles/seg/
-groupMixer.outputFlvPath = /home/ubuntu/videofiles/flv/
-groupMixer.inputSegPath = /home/ubuntu/GroupVoIP2/server/mixcoder/test/bugs/realface_mix_oom.seg
-groupMixer.karaokeFilePath = /home/ubuntu/videofiles/movies
+groupMixer.outputSegPath = /usr/share/red5-server-1.0.2-RC4/videofiles/seg/
+groupMixer.outputFlvPath = /usr/share/red5-server-1.0.2-RC4/videofiles/flv/
+groupMixer.inputSegPath = /usr/share/red5-server-1.0.2-RC4/GroupVoIP2/server/mixcoder/test/bugs/realface_mix_oom.seg
+groupMixer.karaokeFilePath = /usr/share/red5-server-1.0.2-RC4/videofiles/movies
 
