--- a/red5-readonly/external/red5.properties
+++ b/red5-readonly/external/red5.properties
@@ -122,7 +122,9 @@ groupMixer.outputSegPath = /usr/share/red5-server-1.0.2-RC4/videofiles/seg/
 groupMixer.outputFlvPath = /usr/share/red5-server-1.0.2-RC4/videofiles/flv/
 groupMixer.inputSegPath = /usr/share/red5-server-1.0.2-RC4/GroupVoIP2/server/mixcoder/test/bugs/realface_mix_oom.seg
 groupMixer.karaokeFilePath = /usr/share/red5-server-1.0.2-RC4/videofiles/movies
-groupMixer.roomLookupServerIp = 54.201.108.66
-groupMixer.roomLookupServerPort = 8000
-groupMixer.minaLoadServerPort = 1080
+groupMixer.roomLookupServerIp=54.201.108.66
+groupMixer.roomLookupServerPathPrefix=/
+groupMixer.roomLookupServerPort=8000
+groupMixer.minaAgentCheckServerPort=1080
+groupMixer.minaAgentAdminServerPort=1081
 
